pricebox-landpage/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricebox-landpage-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricebox-landpage-app
      restype: pod
  template:
    metadata:
      labels:
        app: pricebox-landpage-app
        restype: pod
    spec:
      containers:
      - image: registry.gitlab.com/pricebox/pricebox-landpage-app:master
        name: pricebox-landpage-app
        ports:
        - containerPort: 8000
          name: http
        resources:
          limits:
            cpu: "250m"
            memory: "1Gi"
          requests:
            cpu: "150m"
            memory: "600Mi"
      imagePullSecrets:
      - name: docker-gitlab
      restartPolicy: Always
