pricebox-landpage/templates/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pricebox-landpage-app
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  rules:
  - host: "landpage.meciasbueno.cloud.okteto.net"
    http:
      paths:
      - backend:
          serviceName: pricebox-landpage-app-clusterip
          servicePort: 80
        # path: /api/some-route
